--- a/voteorskip/templates/base.html
+++ b/voteorskip/templates/base.html
@@ -2,6 +2,7 @@
    <head>
            <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+           <script src="/static/js/bootstrap.js"></script>
            <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
            <link href="/static/css/bootstrap.css" rel="stylesheet">
        <style>
