--- a/voteorskip/templates/index.html
+++ b/voteorskip/templates/index.html
@@ -5,12 +5,12 @@
 	<div class="row">
 		<div class="span8">
 			<h3>
-				<a href="{{ url_for('create_category') }}">Create</a> | 
+				<a href="{{ url_for('create_category') }}">Create</a> &#149;  
 				<a href="{{ url_for('edit') }}">Edit</a>
 			</h3>
 			<br>
 			{% for c in categories %}
-				<a href="/categories/{{ c.title }}/{{ c.owner.nickname() }}">
+				<a href="/categories/{{ c.key() }}">
 					<h4> {{ c.title }} </h4>
 				</a>
 				- created by {{ c.owner }} <br><br>
