--- a/voteorskip/templates/base.html
+++ b/voteorskip/templates/base.html
@@ -1,39 +1,56 @@
+<!DOCTYPE HTML>
 <html>
-   <head>
-           <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-           <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-           <script src="/static/js/bootstrap.js"></script>
-           <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
-           <link href="/static/css/bootstrap.css" rel="stylesheet">
-       <style>
-         body {
-           padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-         }
-       </style>
-           <title>{% block title %}Vote or Skip{% endblock %}</title>
-   </head>
-   <body>
-           <div class="navbar navbar-inverse navbar-fixed-top">
-         <div class="navbar-inner">
-           <div class="container">
-             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-             </a>
-             <a class="brand" href="/">Vote or Skip</a>
-             <div class="nav-collapse collapse">
-               <ul class="nav">
-                <!-- <li class="active"><a href="/profile/{{ username }}"></a></li> -->
-               </ul>
-             </div><!--/.nav-collapse -->
-           </div>
-         </div>
-       </div>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
+    <link href="/static/css/bootstrap.css" rel="stylesheet" />
+    <script>
+    $(function() {
+        $( "#datepicker" ).datepicker();
+    });
+    </script>
+    <style>
+      body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+    </style>
+  <title>{% block title %}Vote or Skip{% endblock %}</title>
+  </head>
+  <body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="/">Vote or Skip</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <!-- <li class="active"><a href="/profile/{{ username }}"></a></li> -->
+            </ul>
+            <form class="navbar-form pull-right" action="#">
+              <input class="medium" type="text" id="search-box" placeholder="Search">
+              <button id="search" class="btn">Search</button>
+            </form>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
 
-       <div class="container">
-         {% block content %}
-         {% endblock %}
-       </div> <!-- /container -->
-   </body>
+    <div class="container">
+    {% block content %}
+    {% endblock %}
+    </div> <!-- /container -->
+  </body>
+  <script>
+    $("#search").click(function(event) {
+      window.location = "http://localhost:8080/battles/search/" + $("#search-box").val();
+      event.preventDefault();
+    });
+</script>
 </html>
