--- a/voteorskip/templates/index.html
+++ b/voteorskip/templates/index.html
@@ -5,8 +5,8 @@
 	<div class="row">
 		<div class="span8">
 			<h3>
-				<a href="{{ url_for('create_category') }}">Create</a> &#149;  
-				<a href="{{ url_for('edit') }}">Edit</a>
+				<a href="{{ url_for('create_category') }}" class="lead">Create</a> &#149;  
+				<a href="{{ url_for('edit') }}" class="lead">Edit</a>
 			</h3>
 			<br>
 			{% for c in categories %}
@@ -19,6 +19,7 @@
 		<div class="span4">
 			<em>
 				<p> Welcome to Vote or Skip! </p>
+				<hr>
 				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget vestibulum urna. Maecenas risus justo, facilisis non feugiat sit amet, laoreet tristique dolor. Aliquam semper diam est, eu hendrerit elit. Curabitur at est quis dui tempor malesuada. In hac habitasse platea dictumst. Sed id dolor nec velit egestas rhoncus id non eros. Vestibulum vulputate fringilla rhoncus. Aenean ac odio risus. Phasellus in sollicitudin purus. Vivamus tempor ultricies interdum. </p>
 			</em>
 		</div>
