--- a/voteorskip/templates/results.html
+++ b/voteorskip/templates/results.html
@@ -3,11 +3,14 @@
 {% block content %}
 
 	<legend>
+		<div class="alert">
+			<button type="button" class="close" data-dismiss="alert">&times;</button>
+			<strong>Note:</strong> This category has expired. Voting is no longer possible
+		</div>
 		<h1> Results </h1>
 		<h3> {{ title }} </h3>
 		<h4> {{ owner }} </h4>
 	</legend>
-
 	<ul class="nav nav-tabs">
 		<li class="active"><a href="#all-results" data-toggle="tab">All Results</a></li>
 		<li><a href="#all-comments" data-toggle="tab">All Comments</a></li>		
