--- a/voteorskip/templates/base.html
+++ b/voteorskip/templates/base.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="/static/js/bootstrap.js"></script>
+    <script src="/static/js/holder.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
     <link href="/static/css/bootstrap.css" rel="stylesheet" />
