Implement client-side checks for image/xml upload

--- a/voteorskip/templates/create_category.html
+++ b/voteorskip/templates/create_category.html
@@ -56,10 +56,10 @@
     </form>
     <hr>
     <h4>... or simply import from an XML file </h4>
-    <form method="post" action = "/upload" name="import-xml-form-create" class="form-horizontal" enctype="multipart/form-data">
+    <form method="post" action = "/upload" id="xml-chooser" name="import-xml-form-create" class="form-horizontal" enctype="multipart/form-data">
         <div class="control-group">
             <div class="controls">
-                <input type="file" name="xml-file" />
+                <input type="file" id="xml-here" name="xml-file" />
             </div>
         </div>
         <div class="control-group">
@@ -142,6 +142,19 @@
         function delete_item(number) {
             $("#item"+number).parent().parent().remove()
         }
+
+        $("#xml-chooser").submit(function() {
+            if ($("#xml-here").val() == "") {
+                alert("Please upload an XML file");
+                return false;
+            } else {
+                file = $("#image-here").val().split('.')
+                if (file[file.length-1] != "xml") {
+                    alert("Please upload an XML file")
+                    return false;
+                }
+            }
+        })
 
     </script>
 {% endblock %}
