--- a/voteorskip/templates/base.html
+++ b/voteorskip/templates/base.html
@@ -3,11 +3,11 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="/static/js/bootstrap.js"></script>
+    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
     <script src="/static/js/holder.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
-    <link href="/static/css/bootstrap.css" rel="stylesheet" />
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/jquery-ui.js" />
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <script>
     $(function() {
         $( "#datepicker" ).datepicker();
@@ -50,7 +50,7 @@
   </body>
   <script>
     $("#search").click(function(event) {
-      window.location = "http://localhost:8080/battles/search/" + $("#search-box").val();
+      window.location = "/battles/search/" + $("#search-box").val();
       event.preventDefault();
     });
 </script>
