--- a/voteorskip/templates/edit_images.html
+++ b/voteorskip/templates/edit_images.html
@@ -56,6 +56,18 @@
 	{% endfor %}
 
 	<script>
+		$("#image-chooser").submit(function() {
+			if ($("#image-here").val() == "") {
+				alert("Please upload an image");
+				return false;
+			} else {
+				file = $("#image-here").val().split('.')
+				if (file[file.length-1] != 'jpg' || file[file.length-1] != 'png' || file[file.length-1] != 'gif' || file[file.length-1] != 'jpeg') {
+					alert("Please upload an image file (.jpg, .jpeg, .png, .gif)")
+					return false;
+				}
+			}
+		})
 	</script>
 
 {% endblock %}
