--- a/voteorskip/templates/create_category.html
+++ b/voteorskip/templates/create_category.html
@@ -148,7 +148,7 @@
                 alert("Please upload an XML file");
                 return false;
             } else {
-                file = $("#image-here").val().split('.')
+                file = $("#xml-here").val().split('.')
                 if (file[file.length-1] != "xml") {
                     alert("Please upload an XML file")
                     return false;
