--- a/voteorskip/templates/edit_images.html
+++ b/voteorskip/templates/edit_images.html
@@ -62,7 +62,7 @@
 				return false;
 			} else {
 				file = $("#image-here").val().split('.')
-				if (file[file.length-1] != 'jpg' || file[file.length-1] != 'png' || file[file.length-1] != 'gif' || file[file.length-1] != 'jpeg') {
+				if (file[file.length-1] != 'jpg' && file[file.length-1] != 'png' && file[file.length-1] != 'gif' && file[file.length-1] != 'jpeg') {
 					alert("Please upload an image file (.jpg, .jpeg, .png, .gif)")
 					return false;
 				}
